--- a/src/main/resources/fxml/RecipeAddDialog.fxml
+++ b/src/main/resources/fxml/RecipeAddDialog.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import cz.afrosoft.whattoeat.core.gui.component.DurationField?>
+<?import cz.afrosoft.whattoeat.core.gui.component.FloatFiled?>
+<?import cz.afrosoft.whattoeat.core.gui.component.KeywordField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import org.controlsfx.control.CheckComboBox?>
+<?import org.controlsfx.control.Rating?>
 <GridPane
         xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121"
         fx:id="dialogContainer"
@@ -15,5 +19,125 @@
             GridPane.rowIndex="0"/>
     <TextField fx:id="nameField"
                GridPane.columnIndex="1"
-               GridPane.rowIndex="0"/>
+               GridPane.rowIndex="0"
+               GridPane.columnSpan="3"/>
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.cookbooks"
+            GridPane.columnIndex="4"
+            GridPane.rowIndex="0"/>
+    <CheckComboBox
+            fx:id="cookbooksField"
+            GridPane.columnIndex="5"
+            GridPane.rowIndex="0"
+    />
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.type"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="1"/>
+    <CheckComboBox
+            fx:id="recipeTypeField"
+            GridPane.columnIndex="1"
+            GridPane.rowIndex="1"
+    />
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.taste"
+            GridPane.columnIndex="2"
+            GridPane.rowIndex="1"/>
+    <ComboBox
+            fx:id="tasteField"
+            GridPane.columnIndex="3"
+            GridPane.rowIndex="1"
+    />
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.time.preparation"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="2"/>
+    <DurationField
+            fx:id="preparationTimeField"
+            GridPane.columnIndex="1"
+            GridPane.rowIndex="2"/>
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.time.cooking"
+            GridPane.columnIndex="2"
+            GridPane.rowIndex="2"/>
+    <DurationField
+            fx:id="cookingTimeField"
+            GridPane.columnIndex="3"
+            GridPane.rowIndex="2"/>
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.time.total"
+            GridPane.columnIndex="4"
+            GridPane.rowIndex="2"/>
+    <Label
+            fx:id="totalTimeLabel"
+            GridPane.columnIndex="5"
+            GridPane.rowIndex="2"/>
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.rating"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="3"/>
+    <Rating
+            fx:id="ratingField"
+            GridPane.columnIndex="1"
+            GridPane.rowIndex="3"
+    />
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.ingredients"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="4"/>
+    <Separator
+            GridPane.columnIndex="1"
+            GridPane.rowIndex="4"
+            GridPane.columnSpan="5"/>
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.ingredient.name"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="5"/>
+    <TextField
+            fx:id="ingredientNameField"
+            GridPane.columnIndex="1"
+            GridPane.rowIndex="5"/>
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.ingredient.quantity"
+            GridPane.columnIndex="2"
+            GridPane.rowIndex="5"/>
+    <FloatFiled
+            fx:id="ingredientQuantityField"
+            GridPane.columnIndex="3"
+            GridPane.rowIndex="5"/>
+    <Label
+            fx:id="unitLabel"
+            GridPane.columnIndex="4"
+            GridPane.rowIndex="5"/>
+    <TableView
+            fx:id="ingredientTable"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="6"
+            GridPane.columnSpan="6">
+        <columns>
+            <TableColumn fx:id="ingredientNameColumn"/>
+            <TableColumn fx:id="ingredientQuantityColumn"/>
+            <TableColumn fx:id="ingredientKeywordColumn"/>
+            <TableColumn fx:id="ingredientRemoveColumn"/>
+        </columns>
+    </TableView>
+    <Label
+            text="%cz.afrosoft.whattoeat.recipes.add.preparation"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="7"/>
+    <Separator
+            GridPane.columnIndex="1"
+            GridPane.rowIndex="7"
+            GridPane.columnSpan="5"/>
+    <TextArea
+            fx:id="preparationField"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="8"
+            GridPane.columnSpan="6"/>
+    <KeywordField
+            fx:id="keywordField"
+            GridPane.columnIndex="0"
+            GridPane.rowIndex="9"
+            GridPane.columnSpan="6"
+    />
 </GridPane>
