--- a/src/main/resources/fxml/RecipeAddDialog.fxml
+++ b/src/main/resources/fxml/RecipeAddDialog.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import org.controlsfx.control.CheckComboBox?>
-<?import org.controlsfx.control.Rating?>
 <?import cz.afrosoft.whattoeat.core.gui.component.DurationField?>
 <?import cz.afrosoft.whattoeat.core.gui.component.FloatFiled?>
 <?import cz.afrosoft.whattoeat.core.gui.component.KeywordField?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import org.controlsfx.control.CheckComboBox?>
+<?import org.controlsfx.control.Rating?>
 <GridPane
         xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121"
         fx:id="dialogContainer"
@@ -111,6 +103,7 @@
                             GridPane.columnIndex="2"
                             GridPane.rowIndex="0"/>
                     <FloatFiled
+                            type="NON_NEGATIVE"
                             fx:id="ingredientQuantityField"
                             GridPane.columnIndex="3"
                             GridPane.rowIndex="0"/>
