--- a/src/main/resources/fxml/RecipeAddDialog.fxml
+++ b/src/main/resources/fxml/RecipeAddDialog.fxml
@@ -13,11 +13,33 @@
         styleClass="recipe-add-dialog"
         stylesheets="@../styles/RecipeAddDialog.css"
 >
+    <columnConstraints>
+        <ColumnConstraints hgrow="ALWAYS"/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints vgrow="ALWAYS"/>
+    </rowConstraints>
+
     <TabPane fx:id="recipeTabs">
         <tabs>
             <!-- Tab with general recipe attributes -->
             <Tab text="%cz.afrosoft.whattoeat.recipes.add.properties" closable="false">
                 <GridPane>
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="NEVER" minWidth="130" maxWidth="130"/>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="50" prefWidth="150"/>
+                        <ColumnConstraints hgrow="NEVER" minWidth="100" maxWidth="100"/>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="50" prefWidth="150"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="ALWAYS"/>
+                    </rowConstraints>
+
                     <Label
                             text="%cz.afrosoft.whattoeat.recipes.add.name"
                             GridPane.columnIndex="0"
@@ -35,6 +57,7 @@
                             GridPane.columnIndex="1"
                             GridPane.rowIndex="1"
                             GridPane.columnSpan="3"
+                            maxWidth="1000000"
                     />
                     <Label
                             text="%cz.afrosoft.whattoeat.recipes.add.type"
@@ -44,6 +67,7 @@
                             fx:id="recipeTypeField"
                             GridPane.columnIndex="1"
                             GridPane.rowIndex="2"
+                            maxWidth="1000000"
                     />
                     <Label
                             text="%cz.afrosoft.whattoeat.recipes.add.taste"
@@ -53,6 +77,7 @@
                             fx:id="tasteField"
                             GridPane.columnIndex="3"
                             GridPane.rowIndex="2"
+                            maxWidth="1000000"
                     />
                     <Label
                             text="%cz.afrosoft.whattoeat.recipes.add.time.preparation"
@@ -83,13 +108,25 @@
                             fx:id="keywordField"
                             GridPane.columnIndex="0"
                             GridPane.rowIndex="5"
-                            GridPane.columnSpan="3"
+                            GridPane.columnSpan="4"
                     />
                 </GridPane>
             </Tab>
             <!-- Tab with recipe ingredients -->
             <Tab text="%cz.afrosoft.whattoeat.recipes.add.ingredients" closable="false">
-                <GridPane>
+                <GridPane styleClass="ingredient-tab-layout">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="NEVER" minWidth="50"/>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="50"/>
+                        <ColumnConstraints hgrow="NEVER" minWidth="60"/>
+                        <ColumnConstraints hgrow="NEVER" minWidth="50" prefWidth="100" maxWidth="100"/>
+                        <ColumnConstraints hgrow="NEVER" minWidth="20" maxWidth="20"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="ALWAYS"/>
+                    </rowConstraints>
+
                     <Label
                             text="%cz.afrosoft.whattoeat.recipes.add.ingredient.name"
                             GridPane.columnIndex="0"
@@ -103,6 +140,7 @@
                             GridPane.columnIndex="2"
                             GridPane.rowIndex="0"/>
                     <FloatFiled
+                            styleClass="ingredient-quantity-field"
                             type="NON_NEGATIVE"
                             fx:id="ingredientQuantityField"
                             GridPane.columnIndex="3"
@@ -115,12 +153,16 @@
                             fx:id="ingredientTable"
                             GridPane.columnIndex="0"
                             GridPane.rowIndex="1"
-                            GridPane.columnSpan="4">
+                            GridPane.columnSpan="5">
+                        <columnResizePolicy>
+                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                        </columnResizePolicy>
                         <columns>
                             <TableColumn fx:id="ingredientNameColumn"/>
-                            <TableColumn fx:id="ingredientQuantityColumn"/>
-                            <TableColumn fx:id="ingredientKeywordColumn"/>
-                            <TableColumn fx:id="ingredientRemoveColumn"/>
+                            <TableColumn fx:id="ingredientQuantityColumn" minWidth="70" maxWidth="150"/>
+                            <TableColumn fx:id="ingredientKeywordColumn" sortable="false"/>
+                            <TableColumn fx:id="ingredientRemoveColumn" minWidth="40" maxWidth="40" resizable="false"
+                                         sortable="false"/>
                         </columns>
                     </TableView>
                 </GridPane>
@@ -132,6 +174,15 @@
             <!-- Tab with side dishes -->
             <Tab fx:id="sideDishTab" text="%cz.afrosoft.whattoeat.recipes.add.sideDishes" closable="false">
                 <GridPane>
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="NEVER"/>
+                        <ColumnConstraints hgrow="ALWAYS"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="ALWAYS"/>
+                    </rowConstraints>
+
                     <Label text="%cz.afrosoft.whattoeat.recipes.add.sideDishes.name"
                            GridPane.columnIndex="0"
                            GridPane.rowIndex="0"/>
