--- a/src/main/resources/fxml/RecipeAddDialog.fxml
+++ b/src/main/resources/fxml/RecipeAddDialog.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import cz.afrosoft.whattoeat.core.gui.component.DurationField?>
-<?import cz.afrosoft.whattoeat.core.gui.component.FloatFiled?>
-<?import cz.afrosoft.whattoeat.core.gui.component.KeywordField?>
+<?import cz.afrosoft.whattoeat.core.gui.component.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import org.controlsfx.control.CheckComboBox?>
@@ -118,6 +116,7 @@
                     <columnConstraints>
                         <ColumnConstraints hgrow="NEVER" minWidth="50"/>
                         <ColumnConstraints hgrow="ALWAYS" minWidth="50"/>
+                        <ColumnConstraints hgrow="NEVER" minWidth="50" maxWidth="50"/>
                         <ColumnConstraints hgrow="NEVER" minWidth="60"/>
                         <ColumnConstraints hgrow="NEVER" minWidth="50" prefWidth="100" maxWidth="100"/>
                         <ColumnConstraints hgrow="NEVER" minWidth="20" maxWidth="20"/>
@@ -135,25 +134,30 @@
                             fx:id="ingredientNameField"
                             GridPane.columnIndex="1"
                             GridPane.rowIndex="0"/>
+                    <AddButton
+                            fx:id="ingredientAddButton"
+                            onAction="#addIngredient"
+                            GridPane.columnIndex="2"
+                            GridPane.rowIndex="0"/>
                     <Label
                             text="%cz.afrosoft.whattoeat.recipes.add.ingredient.quantity"
-                            GridPane.columnIndex="2"
+                            GridPane.columnIndex="3"
                             GridPane.rowIndex="0"/>
                     <FloatFiled
                             styleClass="ingredient-quantity-field"
                             type="NON_NEGATIVE"
                             fx:id="ingredientQuantityField"
-                            GridPane.columnIndex="3"
+                            GridPane.columnIndex="4"
                             GridPane.rowIndex="0"/>
                     <Label
                             fx:id="unitLabel"
-                            GridPane.columnIndex="4"
+                            GridPane.columnIndex="5"
                             GridPane.rowIndex="0"/>
                     <TableView
                             fx:id="ingredientTable"
                             GridPane.columnIndex="0"
                             GridPane.rowIndex="1"
-                            GridPane.columnSpan="5">
+                            GridPane.columnSpan="6">
                         <columnResizePolicy>
                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
                         </columnResizePolicy>
