--- a/src/main/resources/fxml/RecipeAddDialog.fxml
+++ b/src/main/resources/fxml/RecipeAddDialog.fxml
@@ -3,7 +3,6 @@
 <?import cz.afrosoft.whattoeat.core.gui.component.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import org.controlsfx.control.CheckComboBox?>
 <?import org.controlsfx.control.Rating?>
 <GridPane
         xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121"
@@ -50,7 +49,7 @@
                             text="%cz.afrosoft.whattoeat.recipes.add.cookbooks"
                             GridPane.columnIndex="0"
                             GridPane.rowIndex="1"/>
-                    <CheckComboBox
+                    <MultiSelect
                             fx:id="cookbooksField"
                             GridPane.columnIndex="1"
                             GridPane.rowIndex="1"
@@ -61,7 +60,7 @@
                             text="%cz.afrosoft.whattoeat.recipes.add.type"
                             GridPane.columnIndex="0"
                             GridPane.rowIndex="2"/>
-                    <CheckComboBox
+                    <MultiSelect
                             fx:id="recipeTypeField"
                             GridPane.columnIndex="1"
                             GridPane.rowIndex="2"
