--- a/src/main/resources/fxml/RecipeAddDialog.fxml
+++ b/src/main/resources/fxml/RecipeAddDialog.fxml
@@ -122,40 +122,50 @@
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints vgrow="NEVER"/>
+                        <RowConstraints vgrow="NEVER"/>
                         <RowConstraints vgrow="ALWAYS"/>
                     </rowConstraints>
-
+                    <Label
+                            text="%cz.afrosoft.whattoeat.recipes.add.ingredient.servings"
+                            GridPane.columnIndex="3"
+                            GridPane.rowIndex="0"/>
+                    <FloatFiled
+                            styleClass="ingredient-float-field"
+                            type="NON_NEGATIVE"
+                            fx:id="ingredientServingsField"
+                            GridPane.columnIndex="4"
+                            GridPane.rowIndex="0"/>
                     <Label
                             text="%cz.afrosoft.whattoeat.recipes.add.ingredient.name"
                             GridPane.columnIndex="0"
-                            GridPane.rowIndex="0"/>
+                            GridPane.rowIndex="1"/>
                     <TextField
                             fx:id="ingredientNameField"
                             GridPane.columnIndex="1"
-                            GridPane.rowIndex="0"/>
+                            GridPane.rowIndex="1"/>
                     <AddButton
                             fx:id="ingredientAddButton"
                             onAction="#addIngredient"
                             GridPane.columnIndex="2"
-                            GridPane.rowIndex="0"/>
+                            GridPane.rowIndex="1"/>
                     <Label
                             text="%cz.afrosoft.whattoeat.recipes.add.ingredient.quantity"
                             GridPane.columnIndex="3"
-                            GridPane.rowIndex="0"/>
+                            GridPane.rowIndex="1"/>
                     <FloatFiled
-                            styleClass="ingredient-quantity-field"
+                            styleClass="ingredient-float-field"
                             type="NON_NEGATIVE"
                             fx:id="ingredientQuantityField"
                             GridPane.columnIndex="4"
-                            GridPane.rowIndex="0"/>
+                            GridPane.rowIndex="1"/>
                     <Label
                             fx:id="unitLabel"
                             GridPane.columnIndex="5"
-                            GridPane.rowIndex="0"/>
+                            GridPane.rowIndex="1"/>
                     <TableView
                             fx:id="ingredientTable"
                             GridPane.columnIndex="0"
-                            GridPane.rowIndex="1"
+                            GridPane.rowIndex="2"
                             GridPane.columnSpan="6">
                         <columnResizePolicy>
                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
