Focus traversal enhancements.

--- a/src/main/resources/fxml/RecipeAddDialog.fxml
+++ b/src/main/resources/fxml/RecipeAddDialog.fxml
@@ -98,6 +98,7 @@
                             GridPane.rowIndex="4"/>
                     <Rating
                             fx:id="ratingField"
+                            styleClass="rating-field"
                             GridPane.columnIndex="1"
                             GridPane.rowIndex="4"
                     />
