--- a/src/main/resources/styles/RecipeAddDialog.css
+++ b/src/main/resources/styles/RecipeAddDialog.css
@@ -17,3 +17,7 @@ GridPane{
 .ingredient-float-field{
     -fx-max-width: 100px;
 }
+
+.rating-field:focused > .container > .button {
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,200,0.6) , 8, 0.0 , 0 , 0 );
+}
