Fixed text area wrapping.

--- a/src/main/resources/fxml/AuthorDialog.fxml
+++ b/src/main/resources/fxml/AuthorDialog.fxml
@@ -26,6 +26,7 @@
            GridPane.rowIndex="2"
            GridPane.columnSpan="2"/>
     <TextArea fx:id="descriptionArea"
+              wrapText="true"
               GridPane.columnIndex="0"
               GridPane.rowIndex="3"
               GridPane.columnSpan="2"/>
