Recipe dialog now suggest only keywords which are already used in other recipes. Ingredient dialog suggest only keywords used in other ingredients.

--- a/src/main/resources/fxml/IngredientDialog.fxml
+++ b/src/main/resources/fxml/IngredientDialog.fxml
@@ -30,6 +30,7 @@
                 GridPane.columnIndex="3"
                 GridPane.rowIndex="1"/>
     <KeywordField fx:id="keywordField"
+                  keywordType="INGREDIENT_KEYWORDS"
                   GridPane.columnIndex="0"
                   GridPane.rowIndex="2"
                   GridPane.columnSpan="4"
