--- a/src/main/resources/fxml/CookbookDialog.fxml
+++ b/src/main/resources/fxml/CookbookDialog.fxml
@@ -2,39 +2,49 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<GridPane
-        xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121"
-        fx:id="dialogContainer"
-        styleClass="cookbook-dialog"
-        stylesheets="@../styles/CookbookDialog.css"
->
-    <Label
-            text="%cz.afrosoft.whattoeat.cookbook.add.name"
-            GridPane.columnIndex="0"
-            GridPane.rowIndex="0"/>
-    <TextField fx:id="nameField"
-               GridPane.columnIndex="1"
-               GridPane.rowIndex="0"/>
-    <Label text="%cz.afrosoft.whattoeat.cookbook.add.description"
-           GridPane.columnIndex="0"
-           GridPane.rowIndex="1"/>
-    <TextArea fx:id="descriptionArea"
-              wrapText="true"
-              GridPane.columnIndex="0"
-              GridPane.rowIndex="2"
-              GridPane.columnSpan="2"/>
-    <Label text="%cz.afrosoft.whattoeat.cookbook.add.authors"
-           GridPane.columnIndex="0"
-           GridPane.rowIndex="3"/>
-    <Label text="%cz.afrosoft.whattoeat.cookbook.add.authors.name"
-           GridPane.columnIndex="0"
-           GridPane.rowIndex="4"/>
-    <ComboBox fx:id="authorField"
-              GridPane.columnIndex="1"
-              GridPane.rowIndex="4"/>
-    <ListView fx:id="authorList"
-              GridPane.columnIndex="0"
-              GridPane.rowIndex="5"
-              GridPane.columnSpan="2"/>
+<fx:root
+        type="javafx.scene.control.Dialog"
+        xmlns:fx="http://javafx.com/fxml">
+    <dialogPane>
+        <DialogPane>
+            <content>
+                <GridPane
+                        xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121"
+                        fx:id="dialogContainer"
+                        styleClass="cookbook-dialog"
+                        stylesheets="@../styles/CookbookDialog.css"
+                >
+                    <Label
+                            text="%cz.afrosoft.whattoeat.cookbook.add.name"
+                            GridPane.columnIndex="0"
+                            GridPane.rowIndex="0"/>
+                    <TextField fx:id="nameField"
+                               GridPane.columnIndex="1"
+                               GridPane.rowIndex="0"/>
+                    <Label text="%cz.afrosoft.whattoeat.cookbook.add.description"
+                           GridPane.columnIndex="0"
+                           GridPane.rowIndex="1"/>
+                    <TextArea fx:id="descriptionArea"
+                              wrapText="true"
+                              GridPane.columnIndex="0"
+                              GridPane.rowIndex="2"
+                              GridPane.columnSpan="2"/>
+                    <Label text="%cz.afrosoft.whattoeat.cookbook.add.authors"
+                           GridPane.columnIndex="0"
+                           GridPane.rowIndex="3"/>
+                    <Label text="%cz.afrosoft.whattoeat.cookbook.add.authors.name"
+                           GridPane.columnIndex="0"
+                           GridPane.rowIndex="4"/>
+                    <ComboBox fx:id="authorField"
+                              GridPane.columnIndex="1"
+                              GridPane.rowIndex="4"/>
+                    <ListView fx:id="authorList"
+                              GridPane.columnIndex="0"
+                              GridPane.rowIndex="5"
+                              GridPane.columnSpan="2"/>
 
-</GridPane>
+                </GridPane>
+            </content>
+        </DialogPane>
+    </dialogPane>
+</fx:root>
