--- a/src/main/resources/fxml/Menu.fxml
+++ b/src/main/resources/fxml/Menu.fxml
@@ -16,6 +16,7 @@
                 <Button onAction="#showCookbookList" text="%cz.afrosoft.whattoeat.menu.cookbooks"/>
                 <Button onAction="#showRecipeList" text="%cz.afrosoft.whattoeat.menu.recipes"/>
                 <Button onAction="#showIngredientList" text="%cz.afrosoft.whattoeat.menu.ingredients"/>
+                <Button onAction="#showDietList" text="%cz.afrosoft.whattoeat.dietlist.title"/>
             </items>
         </ToolBar>
     </top>
