--- a/src/main/resources/fxml/DietGenerator.fxml
+++ b/src/main/resources/fxml/DietGenerator.fxml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import cz.afrosoft.whattoeat.core.gui.component.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import cz.afrosoft.whattoeat.core.gui.component.FieldLabel?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1"
           xmlns="http://javafx.com/javafx/8.0.121"
           fx:controller="cz.afrosoft.whattoeat.diet.list.gui.controller.DietGeneratorController">
