--- a/src/main/resources/fxml/DietView.fxml
+++ b/src/main/resources/fxml/DietView.fxml
@@ -2,7 +2,9 @@
 
 <?import cz.afrosoft.whattoeat.core.gui.component.EditButton?>
 <?import cz.afrosoft.whattoeat.core.gui.component.ViewButton?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <BorderPane
