--- a/src/main/resources/fxml/RecipeList.fxml
+++ b/src/main/resources/fxml/RecipeList.fxml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import cz.afrosoft.whattoeat.core.gui.component.*?>
-<?import javafx.scene.control.*?>
+<?import cz.afrosoft.whattoeat.core.gui.component.AddButton?>
+<?import cz.afrosoft.whattoeat.core.gui.component.DeleteButton?>
+<?import cz.afrosoft.whattoeat.core.gui.component.EditButton?>
+<?import cz.afrosoft.whattoeat.core.gui.component.FieldLabel?>
+<?import cz.afrosoft.whattoeat.core.gui.component.MultiSelect?>
+<?import cz.afrosoft.whattoeat.core.gui.component.RemoveButton?>
+<?import cz.afrosoft.whattoeat.core.gui.component.SearchButton?>
+<?import cz.afrosoft.whattoeat.core.gui.component.ViewButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
