--- a/src/main/resources/fxml/DayDietDialog.fxml
+++ b/src/main/resources/fxml/DayDietDialog.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import cz.afrosoft.whattoeat.core.gui.component.FieldLabel?>
-<?import cz.afrosoft.whattoeat.core.gui.component.IntegerField?>
-<?import javafx.scene.control.Dialog?>
-<?import javafx.scene.control.DialogPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
+<?import cz.afrosoft.whattoeat.core.gui.component.FloatField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <fx:root
         type="javafx.scene.control.Dialog"
         xmlns:fx="http://javafx.com/fxml">
@@ -32,9 +28,9 @@
                                 GridPane.columnIndex="2"
                                 GridPane.rowIndex="0"
                     />
-                    <IntegerField fx:id="servingsField"
-                                  GridPane.columnIndex="3"
-                                  GridPane.rowIndex="0"
+                    <FloatField fx:id="servingsField"
+                                GridPane.columnIndex="3"
+                                GridPane.rowIndex="0"
                     />
                     <TableView fx:id="mealTable"
                                GridPane.columnIndex="0"
