--- a/src/main/resources/fxml/IngredientDialog.fxml
+++ b/src/main/resources/fxml/IngredientDialog.fxml
@@ -32,7 +32,7 @@
                     <Label text="%cz.afrosoft.whattoeat.ingredient.dialog.price"
                            GridPane.columnIndex="2"
                            GridPane.rowIndex="1"/>
-                    <FloatFiled fx:id="priceField"
+                    <FloatField fx:id="priceField"
                                 GridPane.columnIndex="3"
                                 GridPane.rowIndex="1"/>
                     <KeywordField fx:id="keywordField"
@@ -51,31 +51,31 @@
                             <Label text="%cz.afrosoft.whattoeat.ingredient.dialog.conversion.piece"
                                    GridPane.columnIndex="0"
                                    GridPane.rowIndex="0"/>
-                            <FloatFiled fx:id="gramsPerPieceField"
+                            <FloatField fx:id="gramsPerPieceField"
                                         GridPane.columnIndex="1"
                                         GridPane.rowIndex="0"/>
                             <Label text="%cz.afrosoft.whattoeat.ingredient.dialog.conversion.gram"
                                    GridPane.columnIndex="0"
                                    GridPane.rowIndex="1"/>
-                            <FloatFiled fx:id="milliliterPerGramField"
+                            <FloatField fx:id="milliliterPerGramField"
                                         GridPane.columnIndex="1"
                                         GridPane.rowIndex="1"/>
                             <Label text="%cz.afrosoft.whattoeat.ingredient.dialog.conversion.pinch"
                                    GridPane.columnIndex="0"
                                    GridPane.rowIndex="2"/>
-                            <FloatFiled fx:id="gramsPerPinchField"
+                            <FloatField fx:id="gramsPerPinchField"
                                         GridPane.columnIndex="1"
                                         GridPane.rowIndex="2"/>
                             <Label text="%cz.afrosoft.whattoeat.ingredient.dialog.conversion.cofeespoon"
                                    GridPane.columnIndex="0"
                                    GridPane.rowIndex="3"/>
-                            <FloatFiled fx:id="gramsPerCoffeeSpoonField"
+                            <FloatField fx:id="gramsPerCoffeeSpoonField"
                                         GridPane.columnIndex="1"
                                         GridPane.rowIndex="3"/>
                             <Label text="%cz.afrosoft.whattoeat.ingredient.dialog.conversion.spoon"
                                    GridPane.columnIndex="0"
                                    GridPane.rowIndex="4"/>
-                            <FloatFiled fx:id="gramsPerSpoonField"
+                            <FloatField fx:id="gramsPerSpoonField"
                                         GridPane.columnIndex="1"
                                         GridPane.rowIndex="4"/>
                         </GridPane>
